--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,20 +1,20 @@
-foreground   #7cc0cb
-background   #0A1011
-cursor       #7cc0cb
+foreground   #e1e3bc
+background   #192045
+cursor       #e1e3bc
 
-color0       #0A1011
-color8       #56868e
-color1       #9E6A0F
-color9       #9E6A0F
-color2       #C17C0E
-color10      #C17C0E
-color3       #DCA10A
-color11      #DCA10A
-color4       #DFBC0F
-color12      #DFBC0F
-color5       #809E79
-color13      #809E79
-color6       #09758C
-color14      #09758C
-color7       #7cc0cb
-color15      #7cc0cb
+color0       #192045
+color8       #9d9e83
+color1       #D3458D
+color9       #D3458D
+color2       #EB4992
+color10      #EB4992
+color3       #47A2A5
+color11      #47A2A5
+color4       #4ED7AA
+color12      #4ED7AA
+color5       #53D7C5
+color13      #53D7C5
+color6       #9FCFBF
+color14      #9FCFBF
+color7       #e1e3bc
+color15      #e1e3bc
