--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,20 +1,4 @@
-foreground   #e1e3bc
-background   #192045
-cursor       #e1e3bc
-
-color0       #192045
-color8       #9d9e83
-color1       #D3458D
-color9       #D3458D
-color2       #EB4992
-color10      #EB4992
-color3       #47A2A5
-color11      #47A2A5
-color4       #4ED7AA
-color12      #4ED7AA
-color5       #53D7C5
-color13      #53D7C5
-color6       #9FCFBF
-color14      #9FCFBF
-color7       #e1e3bc
-color15      #e1e3bc
+include colors-kitty.conf
+font_size: 16.0
+font_family Source Code Pro Bold
+background_opacity 0.8
